--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -1,6 +1,6 @@
-{% block page_content %}
 {% load static %}
 
+{% block page_content %}
 
 <!DOCTYPE html>
 <html>
@@ -24,12 +24,17 @@ tr:nth-child(even) {
 </style>
 </head>
 <body>
+
+
+
 <div><img src="{% static 'core/top_logo.png' %}"></div>
 
-<div><img src="graph.png"></div>
+<div><img src="{% static 'core/graph.png' %}"></div>
 
 
-<h2>Аналитика из гугл-таблицы</h2>
+<h2>Аналитика из гугл-таблицы:
+  Сумма по столбцу <b>"Cтоимость, $": {{ sum.price__sum }}</b>
+</h2>
 
 <table>
   <thead>
@@ -44,7 +49,13 @@ tr:nth-child(even) {
     <td>{{ result.number }}</td>
     <td>{{ result.order_id }}</td>
     <td>{{ result.price }}</td>
-    <td>{{ result.delivery_time_orig }}</td>
+    <td>{{ result.delivery_time_orig }}
+
+      {% if result.expired == True %}
+      <font color="red">Просрочен</font>
+      {% endif %}
+
+    </td>
   </tr>
   {% endfor %}
   </tbody>
